src/test/ui/privacy/private-struct-field-ctor.stderr
error[E0451]: field `x` of struct `a::Foo` is private
  --> $DIR/private-struct-field-ctor.rs:8:22
   |
LL |     let s = a::Foo { x: 1 };
   |                      ^^^^ field `x` is private

error: aborting due to previous error

For more information about this error, try `rustc --explain E0451`.
